# actor-opencl

./: CMakeLists.txt  README.md  actor.opencl.podspec.json
examples/: CMakeLists.txt  proper_matrix.cpp  scan.cpp  simple_matrix.cpp
include/nil/actor/detail/: command_helper.hpp  raw_ptr.hpp  spawn_helper.hpp
include/nil/actor/opencl/: actor_facade.hpp  all.hpp  arguments.hpp  command.hpp  device.hpp  global.hpp  manager.hpp  mem_ref.hpp  nd_range.hpp  opencl_error.hpp  platform.hpp  program.hpp
src/: device.cpp  global.cpp  manager.cpp  opencl_error.cpp  platform.cpp  program.cpp
test/: opencl.cpp
